# mappazzone

./: .gitignore  LICENSE  README.md  main-pyinstaller.py  mappazzone.spec  pyproject.toml
src/mappazzone/: board.py  constants.py  game.py  locations.py  mappazzone.py  options.py  themes.py  ui.py  utils.py
src/mappazzone/data/: continents.csv
tests/: test_board.py  test_game.py  test_locations.py  test_options.py  test_ui.py
